@@ -1,3 +1,7 @@
+2010-06-20  Susanne Moog  <typo3@susanne-moog.de>
+
+	* Fixed bug #14752: Add Update Wizards for Skinning Changes (Thanks to Steffen Ritter)
+
 2010-06-20  Benjamin Mack  <benni@typo3.org>
 
 	* Followup to #14733: Improvements to Backend skin - Added styling to missing parts of the Backend
